Finished mark ups. Continuing work on less is more.

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,13 @@
 // Mixins in here
+.flex-basic {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex-mobile {
+    .flex-basic;
+    flex-direction: column;
+    align-content: center;
+}
