--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+.main-nav {
+    padding: 0 10%;
+    .flex-basic;
+    border-bottom: @nav-border;
+
+    h1 {
+        border: 1px solid black;
+        width: 50%;
+    }
+
+    nav {
+        border: 1px solid black;
+        .flex-basic;
+        font-size: 1.6rem;
+        width: 50%;
+        padding: 0 7%;
+        a {
+            text-decoration: none;
+            color: black;
+        }
+    }
+}// .main-nav
