--- a/less/home-page.less
+++ b/less/home-page.less
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    border-top: 2px dashed @navigation-border;
     
     .text-content {
       width: 48%;
