--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,14 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+
+// My Nav Vars
+@nav-border: 2px dashed @silver;
+@nav-decor: none;
+
+
+
+
+
+// Media
+@phone: ~"(max-width: 500px)";
