Desktop version finished. Commencing mobile.

--- a/less/variables.less
+++ b/less/variables.less
@@ -10,10 +10,10 @@
 @white: #FFFFFF;
 @silver: #C0C0C0;
 @shark: #212529;
-@eastern-blue: #17A2B8;
+@eastern-blue: rgb(23, 134, 110);
 @sandy-beach: #FFEBCD;
 
-// My Nav Vars
+// Nav Vars
 @nav-border: 2px dashed @silver;
 @nav-decor: none;
 
