--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,22 @@
+.test-border {
+  border: 1px solid black;
+}
+.a-custom {
+  text-decoration: none;
+  color: inherit;
+}
 .flex-basic {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+}
+.btn-style {
+  text-align: center;
+  background-color: #17866e;
+  padding: 5%;
+  border-radius: 15px;
+  color: white;
 }
 .flex-mobile {
   display: flex;
@@ -189,20 +203,22 @@ img {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px dashed #C0C0C0;
+  width: 100%;
+  height: 90px;
 }
 .main-nav h1 {
-  border: 1px solid black;
   width: 50%;
 }
 .main-nav nav {
-  border: 1px solid black;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  align-items: flex-end;
   font-size: 1.6rem;
-  width: 50%;
-  padding: 0 7%;
+  width: 40%;
+  height: auto;
+  padding-right: 3%;
 }
 .main-nav nav a {
   text-decoration: none;
@@ -219,12 +235,17 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .content-header {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .content-header .text-content {
+  margin: 2% 0 1% 0;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  border-top: 2px dashed #C0C0C0;
 }
 .home .content-section .text-content {
   width: 48%;
@@ -265,4 +286,17 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .btn {
+  text-align: center;
+  background-color: #17866e;
+  padding: 5%;
+  border-radius: 15px;
+  color: white;
+  font-size: 2rem;
+  width: 85%;
+}
+.home .content-pick .btn a {
+  text-decoration: none;
+  color: inherit;
 }
