--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,9 +1,26 @@
 // Mixins in here
+.test-border {
+    border: 1px solid black;
+}
+
+.a-custom {
+    text-decoration: @nav-decor;
+    color: inherit;
+}
+
 .flex-basic {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+}
+
+.btn-style {
+    text-align: center;
+    background-color: @button-bg;
+    padding: 5%;
+    border-radius: 15px;
+    color: white;
 }
 
 .flex-mobile {
