--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,18 +3,22 @@
     padding: 0 10%;
     .flex-basic;
     border-bottom: @nav-border;
+    width: 100%;
+    height: 90px;
 
     h1 {
-        border: 1px solid black;
+        // border: 1px solid black;
         width: 50%;
     }
 
     nav {
-        border: 1px solid black;
+        // border: 1px solid black;
         .flex-basic;
+        align-items: flex-end;
         font-size: 1.6rem;
-        width: 50%;
-        padding: 0 7%;
+        width: 40%;
+        height: auto;
+        padding-right: 3%;
         a {
             text-decoration: none;
             color: black;
