--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,7 @@
     border-bottom: @nav-border;
     width: 100%;
     height: 90px;
-
+   
     h1 {
         // border: 1px solid black;
         width: 50%;
@@ -20,8 +20,7 @@
         height: auto;
         padding-right: 3%;
         a {
-            text-decoration: none;
-            color: black;
+            .a-custom;
         }
     }
 }// .main-nav
