--- a/css/index.css
+++ b/css/index.css
@@ -11,21 +11,12 @@
   justify-content: space-between;
   align-items: center;
 }
-.btn-style {
-  text-align: center;
-  background-color: #17866e;
-  padding: 5%;
-  border-radius: 15px;
-  color: white;
-}
 .flex-mobile {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
 }
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -291,7 +282,7 @@ img {
 .home .content-pick .btn {
   text-align: center;
   background-color: #17866e;
-  padding: 5%;
+  padding: 5% 0;
   border-radius: 15px;
   color: white;
   font-size: 2rem;
@@ -305,90 +296,59 @@ img {
   .main-nav {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
   }
   .main-nav h1 {
+    margin-top: 4%;
     width: 100%;
     text-align: center;
     font-size: 3rem;
   }
   .main-nav nav {
-    margin-top: 5%;
+    margin-bottom: 2%;
     width: 100%;
     padding: 0;
   }
-  .container {
-    max-width: 500px;
-    padding: 0 4%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
+  .home {
+    padding: 0 5%;
   }
-  .content-section {
-    border: 1px solid black;
-    width: 100%;
+  .home .content-section {
     flex-direction: column;
-    align-content: center;
+    height: auto;
   }
-  .content-section .text-content {
-    border: 1px solid black;
+  .home .content-section .text-content {
     width: 100%;
     padding: 0;
   }
-  .content-section .img-content {
-    border: 1px solid black;
+  .home .content-section .img-content {
+    max-width: 100%;
     width: 100%;
     height: auto;
     padding: 0;
   }
-  .content-section .img-content img {
-    border-radius: 10px;
-  }
-  .inverse-content {
+  .home .inverse-content {
     flex-direction: column-reverse;
   }
-  .inverse-content .text-content {
-    padding: 0;
-  }
-  .inverse-content .img-content {
-    padding: 0;
-  }
-  .content-destination {
-    border: 1px solid black;
+  .home .content-destination {
     width: 100%;
-    margin: 0 auto 30px;
   }
-  .content-destination img {
-    border-radius: 10px;
-  }
-  .content-pick {
-    border: 1px solid black;
+  .home .content-pick {
     flex-direction: column;
-    align-items: center;
+    padding-left: 10%;
+    padding-right: 10%;
   }
-  .content-pick .destination {
+  .home .content-pick .destination {
     width: 100%;
     margin-bottom: 30px;
   }
-  .content-pick .btn {
+  .home .content-pick .btn {
     text-align: center;
     background-color: #17866e;
-    padding: 5%;
+    padding: 3% 0;
     border-radius: 15px;
     color: white;
-    font-size: 2rem;
-    width: 85%;
-  }
-  .content-pick .btn a {
-    text-decoration: none;
-    color: inherit;
+    width: 100%;
   }
 }
